--- a/public/pages/profile.id.html
+++ b/public/pages/profile.id.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <script src="../js/axios.js"></script>
     <link rel="stylesheet" href="../css/profile.css">
+    <link rel="stylesheet" href="../css/profile.id.css">
+
 </head>
 
 <body>
